Change multiple blog ,, html structure, in able to make css { position: sticky } working.

--- a/source/_posts/19/02/20/190220m203646.md
+++ b/source/_posts/19/02/20/190220m203646.md
@@ -11,74 +11,78 @@ date: 2019-02-20 20:36:46
 <!-- more -->
 <hr>
 
-<h2>List</h2>
+<div class="h2">
+  <h2>List</h2>
+  <ol>
+    <li><strong>How to Contact me:</strong> <a href="#190222m144800">Link</a>.</li>
+    <li><strong>About the aim of this blog - what I use the blog for?:</strong> <a href="#190222m123417">Link</a>.</li>
+    <li><strong>How to navigate in this blog?:</strong> <a href="#190222m124809">Link</a>.</li>
+    <li><strong>About "My Log" (Log Table):</strong> If you go to <a href="/treegbBlog/19/03/18/190318m144719/">190318 Log table overview # 190318m144719</a>, you can see I use <strong><code>Log</code></strong> to <strong>log down all my activities</strong>, more frequent, more trivial than normal blog <u>posts</u>. While you can monitoring <strong>my acutal life</strong> here, you might also find it is boring.</li>
+    <li><strong>Why I use Enlglish when I am Taiwanese (using Chinese):</strong>
+      <ol>
+        <li><strong>(2 main reason):</strong></li>
+        <li><strong>.Standard for communication:</strong> English is worldwide language, it is simply a tool to [communicate]-[convey] concept with people from Africa, Europe, Russia, Japan, Brazil, India ... ;</li>
+        <li><strong>.Standard for information technology:</strong> Standarlized all text to English only, can hugely reduce down the [cost]-[effort] of maintaining content, designing software system, searching and indexing content. In another way it will causing too much trouble for me to consider and I currently don't have time to handle multi-language system.</li>
+      </ol>
+    </li>
+  </ol>
+</div>
 
-<ol>
-  <li><strong>How to Contact me:</strong> <a href="#190222m144800">Link</a>.</li>
-  <li><strong>About the aim of this blog - what I use the blog for?:</strong> <a href="#190222m123417">Link</a>.</li>
-  <li><strong>How to navigate in this blog?:</strong> <a href="#190222m124809">Link</a>.</li>
-  <li><strong>About "My Log" (Log Table):</strong> If you go to <a href="/treegbBlog/19/03/18/190318m144719/">190318 Log table overview # 190318m144719</a>, you can see I use <strong><code>Log</code></strong> to <strong>log down all my activities</strong>, more frequent, more trivial than normal blog <u>posts</u>. While you can monitoring <strong>my acutal life</strong> here, you might also find it is boring.</li>
-  <li><strong>Why I use Enlglish when I am Taiwanese (using Chinese):</strong>
-    <ol>
-      <li><strong>(2 main reason):</strong></li>
-      <li><strong>.Standard for communication:</strong> English is worldwide language, it is simply a tool to [communicate]-[convey] concept with people from Africa, Europe, Russia, Japan, Brazil, India ... ;</li>
-      <li><strong>.Standard for information technology:</strong> Standarlized all text to English only, can hugely reduce down the [cost]-[effort] of maintaining content, designing software system, searching and indexing content. In another way it will causing too much trouble for me to consider and I currently don't have time to handle multi-language system.</li>
-    </ol>
-  </li>
-</ol>
+<div class="h2">
+  <h2>How to Contact me<a id="190222m144800"></a></h2>
+  <ol>
+    <li><strong>My nick name and ID:</strong> <code>treegb</code> (<strong>TREE</strong> is <strong>G</strong>rowing <strong>B</strong>igger).</li>
+    <li><strong>Email:</strong> <code>bambooindark@gmail.com</code>. You can use Google Hangout to instant messaging me (with this email) too.</li>
+    <li><strong>Reddit:</strong> I just start using Reddit recently (2019-02) (id <code>treegb</code>), intend to replace facebook. Need some time to make it a habbit.</li>
+    <li><strong>Facebook:</strong> <code>bambooindark@gmail.com</code>. But I seldom have activity on facebook, their services are indeed  the toppiest in the world (in feature) and have rich community, but I just don't like their core value. I just don't believe there is no second service that can replacing them. Now I use <a href="https://www.minds.com">{ Minds }</a> instead.</li>
+  </ol>
+</div>
 
-<h2>How to Contact me<a id="190222m144800"></a></h2>
+<div class="h2">
+  <h2>About the aim of this blog - what I use the blog for?<a id="190222m123417"></a></h2>
+  <ol>
+    <li><strong>The aim:</strong>
+      <ol>
+        <li><strong>To understand the "true side of me":</strong> This blog is not mainly aim to offering useful content, by more of sharing any progress of me learning, doing, thinking, feelings, through those [feeds]-[posts]. I hope I have the courage to 100% expose myself under the sun to make public examine anything they want, including those awkward, weakest, evil part of me. I just hope I can be <strong>honest</strong> to closed-people or distance-people.</li>
+        <li><strong>Making "real-time" feeling:</strong> I want to give people (any the future me) idea about <a href="https://youtu.be/M9i2HAE-ZSw">what I currently doing, thinking, experiencing</a>. So to follow this aim, I have to <strong>do the opposite</strong> thing than post blog trying to do - my post "feed" should be as frequent as possible, put amount first (publish post as frequent as possible), then quality second. This is a tough choice to make because this is 1. Opposite then my previous believe - <u>the idea of I think I should always produce valuable stuff, if can't, I don't do it at all</u> 2. Opposite with <a href="https://youtu.be/I0joqcqpiO4">SEO good practice</a> (i.e. how to make google happy and rank your site better) 3. To create new content, <strong>even useless one</strong>, takes time. But I think in order to achieve this aim (making "real-time" feeling), I should go this direction. So my blog is less blog-like, but more feed-like?
+        <li><strong>Reduce "cognitive load" of readers:</strong> <strong>Ironically</strong>, when flooding content, live feeds, can tremendously increase our cognitive load in one way, <strong>in another way</strong> it seems to reduce it? I know in this information age, we always don't lack content (content just have <u>dust-like value</u> becuase it is not <u>rare resources</u>), we are lacking <u>good content</u>. But I recently read about <a href="/treegbBlog/19/02/25/190225m142305">190225 (Psychology) Analysis paralysis # 190225m142305</a>, if we have too much choice, <strong>we rather don't make any choice and do nothing at all</strong>. To solve this problem, giving real-time content is one option (but maybe not the best), so people don't need to choice, they just randomly pick whatever they get. And the most easy choice to make is, not go find any valuable (but old and need time to find) content, but read the new content, the real-time one. Yeah, this sound as <strong>bad</strong> as it seems, but I think it is a way to go. <strong>The aim of this blog is not always offering good infomation, but the "real-time" infomation</strong>. Tough decision to make, but if I know my aim is this, I will go totally different path.</li>
+        <li><strong>To give the future me the clue about what I was doing:</strong> If I log down my thought, events, experience, along the time, not only people can see these, I can prevent that future me don't have any clue about "what I was doing at that time?".</li>
+      </ol>
+    </li>
+    <li><strong>Twitter:</strong>
+      <ol>
+        <li><strong>280 character limitation:</strong> A while ago I do litte reserching about Twitter, I have really no clue why people want to be limited by that 280 character limitation, it is unbelievable terrible experience for any user (at least for me) that what to write something <strong>deep</strong>. But beside the character limitation of Twitter, it gave me the idea about what is the purpose of those "feeds", what is the meaning of keep producing those post (tweets) while they will definitely not last long and be <strong>buried</strong> under the feeds stream, what is the meaning of keep producing many low quality content instead of few high quality content (trash, will become useless very soon)?</li>
+        <li><strong>It's all about giving real time [experience]-[feeling]:</strong> I still don't fully understand why twitter design itself this way, but I think I came up with some answer about this - <strong>to make people know your [moment]-[current] activity</strong>, just as simple as that! The aim is totolly <strong>different than producing [quality]**[organized]**[structured] content</strong>, and I don't have this mind set until now. To achieve this <strong>real time feeling for the readers</strong>, you have to post as frequent as possible, quantity and timming first, then qualtiy second. I don't like this trends but sometimes I have to follow the trends.</li>
+      </ol>
+    </li>
+    <li><strong>Privacy is not about something to hide, privacy is about something to protect:</strong> This is the only reason (there is no other valid reason) I think privacy is needed. So I don't agree we should choice privacy as the first option if we have other options. If I want to against something I think that is not right, <strong>I would rather publicly against it, [until]-[unless] publicly against it don't work at all or take too much harm for myself</strong>. So my conclusion is, yes, <strong>we do need privacy in some case</strong> (especially related to government [censorship]-[surveillance] and freedom of speech), but we don't need them in most case and we should be as honest to public as we can, this is consider a virtue. I force myself putting myself under the sun as possible.</li>
+  </ol>
+</div>
 
-<ol>
-  <li><strong>My nick name and ID:</strong> <code>treegb</code> (<strong>TREE</strong> is <strong>G</strong>rowing <strong>B</strong>igger).</li>
-  <li><strong>Email:</strong> <code>bambooindark@gmail.com</code>. You can use Google Hangout to instant messaging me (with this email) too.</li>
-  <li><strong>Reddit:</strong> I just start using Reddit recently (2019-02) (id <code>treegb</code>), intend to replace facebook. Need some time to make it a habbit.</li>
-  <li><strong>Facebook:</strong> <code>bambooindark@gmail.com</code>. But I seldom have activity on facebook, their services are indeed  the toppiest in the world (in feature) and have rich community, but I just don't like their core value. I just don't believe there is no second service that can replacing them. Now I use <a href="https://www.minds.com">{ Minds }</a> instead.</li>
-</ol>
-
-<h2>About the aim of this blog - what I use the blog for?<a id="190222m123417"></a></h2>
-
-<ol>
-  <li><strong>The aim:</strong>
-    <ol>
-      <li><strong>To understand the "true side of me":</strong> This blog is not mainly aim to offering useful content, by more of sharing any progress of me learning, doing, thinking, feelings, through those [feeds]-[posts]. I hope I have the courage to 100% expose myself under the sun to make public examine anything they want, including those awkward, weakest, evil part of me. I just hope I can be <strong>honest</strong> to closed-people or distance-people.</li>
-      <li><strong>Making "real-time" feeling:</strong> I want to give people (any the future me) idea about <a href="https://youtu.be/M9i2HAE-ZSw">what I currently doing, thinking, experiencing</a>. So to follow this aim, I have to <strong>do the opposite</strong> thing than post blog trying to do - my post "feed" should be as frequent as possible, put amount first (publish post as frequent as possible), then quality second. This is a tough choice to make because this is 1. Opposite then my previous believe - <u>the idea of I think I should always produce valuable stuff, if can't, I don't do it at all</u> 2. Opposite with <a href="https://youtu.be/I0joqcqpiO4">SEO good practice</a> (i.e. how to make google happy and rank your site better) 3. To create new content, <strong>even useless one</strong>, takes time. But I think in order to achieve this aim (making "real-time" feeling), I should go this direction. So my blog is less blog-like, but more feed-like?
-      <li><strong>Reduce "cognitive load" of readers:</strong> <strong>Ironically</strong>, when flooding content, live feeds, can tremendously increase our cognitive load in one way, <strong>in another way</strong> it seems to reduce it? I know in this information age, we always don't lack content (content just have <u>dust-like value</u> becuase it is not <u>rare resources</u>), we are lacking <u>good content</u>. But I recently read about <a href="/treegbBlog/19/02/25/190225m142305">190225 (Psychology) Analysis paralysis # 190225m142305</a>, if we have too much choice, <strong>we rather don't make any choice and do nothing at all</strong>. To solve this problem, giving real-time content is one option (but maybe not the best), so people don't need to choice, they just randomly pick whatever they get. And the most easy choice to make is, not go find any valuable (but old and need time to find) content, but read the new content, the real-time one. Yeah, this sound as <strong>bad</strong> as it seems, but I think it is a way to go. <strong>The aim of this blog is not always offering good infomation, but the "real-time" infomation</strong>. Tough decision to make, but if I know my aim is this, I will go totally different path.</li>
-      <li><strong>To give the future me the clue about what I was doing:</strong> If I log down my thought, events, experience, along the time, not only people can see these, I can prevent that future me don't have any clue about "what I was doing at that time?".</li>
-    </ol>
-  </li>
-  <li><strong>Twitter:</strong>
-    <ol>
-      <li><strong>280 character limitation:</strong> A while ago I do litte reserching about Twitter, I have really no clue why people want to be limited by that 280 character limitation, it is unbelievable terrible experience for any user (at least for me) that what to write something <strong>deep</strong>. But beside the character limitation of Twitter, it gave me the idea about what is the purpose of those "feeds", what is the meaning of keep producing those post (tweets) while they will definitely not last long and be <strong>buried</strong> under the feeds stream, what is the meaning of keep producing many low quality content instead of few high quality content (trash, will become useless very soon)?</li>
-      <li><strong>It's all about giving real time [experience]-[feeling]:</strong> I still don't fully understand why twitter design itself this way, but I think I came up with some answer about this - <strong>to make people know your [moment]-[current] activity</strong>, just as simple as that! The aim is totolly <strong>different than producing [quality]**[organized]**[structured] content</strong>, and I don't have this mind set until now. To achieve this <strong>real time feeling for the readers</strong>, you have to post as frequent as possible, quantity and timming first, then qualtiy second. I don't like this trends but sometimes I have to follow the trends.</li>
-    </ol>
-  </li>
-  <li><strong>Privacy is not about something to hide, privacy is about something to protect:</strong> This is the only reason (there is no other valid reason) I think privacy is needed. So I don't agree we should choice privacy as the first option if we have other options. If I want to against something I think that is not right, <strong>I would rather publicly against it, [until]-[unless] publicly against it don't work at all or take too much harm for myself</strong>. So my conclusion is, yes, <strong>we do need privacy in some case</strong> (especially related to government [censorship]-[surveillance] and freedom of speech), but we don't need them in most case and we should be as honest to public as we can, this is consider a virtue. I force myself putting myself under the sun as possible.</li>
-</ol>
-
-<h2>How to navigate in this blog?:<a id="190222m124809"></a></h2>
-
-<ol>
-  <li><strong>Use timeline:</strong> All <u>posts</u> list in <a href="/treegbBlog/">home page</a> and <a href="/treegbBlog/archives">archives page</a> are all organized in time-based (date), from older to newer. But also see my <a href="/treegbBlog/19/03/18/190318m144719/">{ Log Table }</a> if you are interesting in my <strong>recent</strong> <code>Logs</code> (events) happens every day, this is the complete [ list ]-[ table ] of my events, activities, thoughts happens every day. This is not as same as normal <u>posts</u>, because content inside <code>Log Table</code> are more trivial and updated <strong>more frequently</strong> than normal <u>posts</u>, while normal <u>posts</u> tends to be more focus to specific ((small)) topic.</li>
-  <li><strong>Use searching feature (search box of this site):</strong>
-    <ol>
-      <li><strong>Use "keywords" to search:</strong> Like <code>orange</code>, <code>fruit</code>, <code>food</code> ...</li>
-      <li><strong>Use "facets" to search:</strong> <code>Facet</code> is similar to <code>keyword</code>, but more accurate to find the exact <strong>concept</strong> you want to find. It looks like this - <code>color88orange</code>, <code>c88food</code>, <code>food88fruit</code>, <code>food88orange</code>, <code>fruit88orange</code>.</li>
-      <li><strong>Why we need "facet" when we can use "keyword"?:</strong>
-        <ol>
-          <li><strong>More accurate to describe (and search) a concept:</strong> Some <code>keyword</code> have <strong>ambiguous</strong> problem, the keyword is not identical (sometimes not even related) to the <strong>concept</strong> what we are looking for. For example the keyword <code>book</code> might mean the concept "a number of pieces of paper, usually with words printed on them", but might also mean the concept "booking a hotel room or a ticket", which cause we found unrelated search result when searching. While <code>keywords</code> are <strong>ambiguous</strong>, <code>facets</code> are <strong>semantic correct</strong>. So instead of using keywords to search, you can use <strong>alternative</strong> method - use facets to search, so you can get more accurate result. For example using facet <code>c88book</code> to search, you will get posts truely related to book (number of pieces of paper), not unrelated result like booking (booking ticket). Another example, the keyword <code>orange</code> can be the concept <u>orange color</u>, or the concept <u>fruit orange</u>, to eliminate the ambiguous, you search with the facet <code>color88orange</code> or <code>food88orange</code>.</li>
-          <li><strong>Some concept can only be describe (and searched) by facet:</strong>
-            <ol>
-              <li><strong>Time:</strong> <u>Time facet</u> like <code>ti88y19m02d20</code> don't have corresponding keyword. If you want to <strong>search for all posts that published at 2019</strong>, you use facet <code>ti88y19</code> to search. If you want to <strong>search for all articles that published at 2019-02</strong>, you use facet <code>ti88y19m02</code> to search. If you want to <strong>search for all articles that published at 2019, q3 (quarter 3 of the year)</strong>, you use facet <code>ti88y19q3</code> to search.</li>
-              <li><strong>Feeling:</strong> Another example is <code>feeling88...</code> related facet, these facts are related to feeling, like <code>feeling88soft</code> (can be a post related to soft music), <code>feeling88cold</code>, <code>feeling88warm</code> (can be a post related to a touching stories). In these cases, using <code>keyword</code> to search might not give you useful result, for example <code>soft</code> might give you "software" related result.</li>
-            </ol>
-          </li>
-          <li><strong>Not all keywords have corresponding facets:</strong> Not all keywords have corresponding facets, and not all facets have corresponding keywords, so you sometimes need to use keywords and sometimes need to use facets to find things. For example, keyword <code>philosophy</code> have corresponding facet <code>c88philoshphy</code>, keyword <code>javascript</code> have corresponding facet <code>lang88javascript</code>. But time facet like <code>ti88y19m02d20</code> (it means the publish time is Year 2019, Month 02, Date 20), <code>problem88solved</code> (I have a personal habit, writting (log) down some problem I encountered. If it is still not solved I will use <code>problem88unsolved</code> instead), <code>x88fs</code> (post don't have file or attachment inside) don't have corresponding keyword.</li>
-        </ol>
-      </li>
-    </ol>
-  </li>
-</ol>
+<div class="h2">
+  <h2>How to navigate in this blog?:<a id="190222m124809"></a></h2>
+  <ol>
+    <li><strong>Use timeline:</strong> All <u>posts</u> list in <a href="/treegbBlog/">home page</a> and <a href="/treegbBlog/archives">archives page</a> are all organized in time-based (date), from older to newer. But also see my <a href="/treegbBlog/19/03/18/190318m144719/">{ Log Table }</a> if you are interesting in my <strong>recent</strong> <code>Logs</code> (events) happens every day, this is the complete [ list ]-[ table ] of my events, activities, thoughts happens every day. This is not as same as normal <u>posts</u>, because content inside <code>Log Table</code> are more trivial and updated <strong>more frequently</strong> than normal <u>posts</u>, while normal <u>posts</u> tends to be more focus to specific ((small)) topic.</li>
+    <li><strong>Use searching feature (search box of this site):</strong>
+      <ol>
+        <li><strong>Use "keywords" to search:</strong> Like <code>orange</code>, <code>fruit</code>, <code>food</code> ...</li>
+        <li><strong>Use "facets" to search:</strong> <code>Facet</code> is similar to <code>keyword</code>, but more accurate to find the exact <strong>concept</strong> you want to find. It looks like this - <code>color88orange</code>, <code>c88food</code>, <code>food88fruit</code>, <code>food88orange</code>, <code>fruit88orange</code>.</li>
+        <li><strong>Why we need "facet" when we can use "keyword"?:</strong>
+          <ol>
+            <li><strong>More accurate to describe (and search) a concept:</strong> Some <code>keyword</code> have <strong>ambiguous</strong> problem, the keyword is not identical (sometimes not even related) to the <strong>concept</strong> what we are looking for. For example the keyword <code>book</code> might mean the concept "a number of pieces of paper, usually with words printed on them", but might also mean the concept "booking a hotel room or a ticket", which cause we found unrelated search result when searching. While <code>keywords</code> are <strong>ambiguous</strong>, <code>facets</code> are <strong>semantic correct</strong>. So instead of using keywords to search, you can use <strong>alternative</strong> method - use facets to search, so you can get more accurate result. For example using facet <code>c88book</code> to search, you will get posts truely related to book (number of pieces of paper), not unrelated result like booking (booking ticket). Another example, the keyword <code>orange</code> can be the concept <u>orange color</u>, or the concept <u>fruit orange</u>, to eliminate the ambiguous, you search with the facet <code>color88orange</code> or <code>food88orange</code>.</li>
+            <li><strong>Some concept can only be describe (and searched) by facet:</strong>
+              <ol>
+                <li><strong>Time:</strong> <u>Time facet</u> like <code>ti88y19m02d20</code> don't have corresponding keyword. If you want to <strong>search for all posts that published at 2019</strong>, you use facet <code>ti88y19</code> to search. If you want to <strong>search for all articles that published at 2019-02</strong>, you use facet <code>ti88y19m02</code> to search. If you want to <strong>search for all articles that published at 2019, q3 (quarter 3 of the year)</strong>, you use facet <code>ti88y19q3</code> to search.</li>
+                <li><strong>Feeling:</strong> Another example is <code>feeling88...</code> related facet, these facts are related to feeling, like <code>feeling88soft</code> (can be a post related to soft music), <code>feeling88cold</code>, <code>feeling88warm</code> (can be a post related to a touching stories). In these cases, using <code>keyword</code> to search might not give you useful result, for example <code>soft</code> might give you "software" related result.</li>
+              </ol>
+            </li>
+            <li><strong>Not all keywords have corresponding facets:</strong> Not all keywords have corresponding facets, and not all facets have corresponding keywords, so you sometimes need to use keywords and sometimes need to use facets to find things. For example, keyword <code>philosophy</code> have corresponding facet <code>c88philoshphy</code>, keyword <code>javascript</code> have corresponding facet <code>lang88javascript</code>. But time facet like <code>ti88y19m02d20</code> (it means the publish time is Year 2019, Month 02, Date 20), <code>problem88solved</code> (I have a personal habit, writting (log) down some problem I encountered. If it is still not solved I will use <code>problem88unsolved</code> instead), <code>x88fs</code> (post don't have file or attachment inside) don't have corresponding keyword.</li>
+          </ol>
+        </li>
+      </ol>
+    </li>
+  </ol>
+</div>
 
 <div class="imgBlock"><img src="/treegbBlog/fs/m/19/02/20/190220m203646/treegb-icon_small.png" alt="treegb icon"></div>
 
