--- a/source/_posts/19/03/06/190306m014438.md
+++ b/source/_posts/19/03/06/190306m014438.md
@@ -10,39 +10,46 @@ date: 2019-03-06 01:44:38
 
 <!-- more -->
 <hr>
-<h2>List</h2>
-<ol>
-  <li><strong>Why I built this project?:</strong> A non-profit seems to need a website (but maybe they don't need it, donno), I tried to come up a site for them as fast as possible (my working was still very slow however). The best option is static website, and I come up to use Static Site Generator.</li>
-  <li><strong>Why I use Hexo for my static site genertor?:</strong> No big good reason, just because they use javascript, and many people useing it.</li>
-  <li><strong>Hexo have bad documentation:</strong> Their docs sucks, I spent so much time doing research, just for building very basic things. And the [router]-[routing] (site path) I don't even want to spend time on it, I don't know how to change the adress, I just follow the default as possible.</li>
-  <li><strong>What I learned:</strong>
-    <ol>
-      <li><strong>Review the old knowledge I'd learned a year ago:</strong> Too long no touching web development stuff, now I start to recall what I'd learned before.</li>
-      <li><strong>[Art]-[design]:</strong> Start to realize I have to be realistic about not spending too much time on doing what I'm not good at, I should see more good examples before I create my own. And I start to understand the key concept of any type of art - <a href="https://youtu.be/LadUft_ly50">Balance between irregular (unpredictable) and regular (predictable)</a>.</li>
-      <li><strong>Svg:</strong> I always struggled about batch changing color for image. Now I learned about <a href="https://www.stockfeel.com.tw/ui%E8%A8%AD%E8%A8%88%E7%95%8C%E5%A4%A7%E5%8B%A2%E6%BD%AE%E6%B5%81%EF%BC%9A%E6%89%81%E5%B9%B3%E5%8C%96%E8%A8%AD%E8%A8%88/">Flat Design</a>, and I think I should have ways to change image color. Fortunately after spending few days research about SVG, I know I can embed vector image in HTML and change color by CSS.</li>
-    </ol>
-  </li>
-  <li><strong>Some screenshots:</strong> <a href="#190306m021355">Anchor</a>.</li>
-</ol>
-<h2>Some screenshots:<a id="190306m021355"></a></h2>
-<ol>
-  <li><strong>About:</strong> To demonstrate the <u>Responsive Design</u> effect.</li>
-  <li><strong>Screen recording:</strong> <a href="https://youtu.be/F7GCD6l6pk0">Link</a>.</li>
-</ol>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/1.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/2.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/3.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/4.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/5.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/6.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/7.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/8.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/9.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/10.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/11.jpg" alt="screenshot">
-  <img src="/treegbBlog/fs/m/19/03/06/190306m014438/12.jpg" alt="screenshot">
+
+<div class="h2">
+  <h2>List</h2>
+  <ol>
+    <li><strong>Why I built this project?:</strong> A non-profit seems to need a website (but maybe they don't need it, donno), I tried to come up a site for them as fast as possible (my working was still very slow however). The best option is static website, and I come up to use Static Site Generator.</li>
+    <li><strong>Why I use Hexo for my static site genertor?:</strong> No big good reason, just because they use javascript, and many people useing it.</li>
+    <li><strong>Hexo have bad documentation:</strong> Their docs sucks, I spent so much time doing research, just for building very basic things. And the [router]-[routing] (site path) I don't even want to spend time on it, I don't know how to change the adress, I just follow the default as possible.</li>
+    <li><strong>What I learned:</strong>
+      <ol>
+        <li><strong>Review the old knowledge I'd learned a year ago:</strong> Too long no touching web development stuff, now I start to recall what I'd learned before.</li>
+        <li><strong>[Art]-[design]:</strong> Start to realize I have to be realistic about not spending too much time on doing what I'm not good at, I should see more good examples before I create my own. And I start to understand the key concept of any type of art - <a href="https://youtu.be/LadUft_ly50">Balance between irregular (unpredictable) and regular (predictable)</a>.</li>
+        <li><strong>Svg:</strong> I always struggled about batch changing color for image. Now I learned about <a href="https://www.stockfeel.com.tw/ui%E8%A8%AD%E8%A8%88%E7%95%8C%E5%A4%A7%E5%8B%A2%E6%BD%AE%E6%B5%81%EF%BC%9A%E6%89%81%E5%B9%B3%E5%8C%96%E8%A8%AD%E8%A8%88/">Flat Design</a>, and I think I should have ways to change image color. Fortunately after spending few days research about SVG, I know I can embed vector image in HTML and change color by CSS.</li>
+      </ol>
+    </li>
+    <li><strong>Some screenshots:</strong> <a href="#190306m021355">Anchor</a>.</li>
+  </ol>
 </div>
+
+<div class="h2">
+  <h2>Some screenshots:<a id="190306m021355"></a></h2>
+  <ol>
+    <li><strong>About:</strong> To demonstrate the <u>Responsive Design</u> effect.</li>
+    <li><strong>Screen recording:</strong> <a href="https://youtu.be/F7GCD6l6pk0">Link</a>.</li>
+  </ol>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/1.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/2.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/3.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/4.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/5.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/6.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/7.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/8.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/9.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/10.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/11.jpg" alt="screenshot">
+    <img src="/treegbBlog/fs/m/19/03/06/190306m014438/12.jpg" alt="screenshot">
+  </div>
+</div>
+
 <hr>
 
 <div class="facetList">
