--- a/source/_posts/19/03/10/190310m200408.md
+++ b/source/_posts/19/03/10/190310m200408.md
@@ -11,93 +11,153 @@ date: 2019-03-10 20:04:08
 <!-- more -->
 <hr>
 
-<h2>List</h2>
+<div class="h2">
+  <h2>List</h2>
+  <ol>
+    <li><strong>Book:</strong> <code>Brave New World</code> is a <strong>dystopian</strong> novel written in 1931 by English author Aldous Huxley, and published in 1932. The book get similar [status]-[reputation] by people, as another famous dystopian novel, <code>1984</code> by George Orwell, 1949.</li>
+    <li><strong>Study note:</strong> Please see below section for those Concept Maps. Serving mainly only for myself. I was experimenting <a href="https://cmap.ihmc.us/docs/concept.php">Concept Map</a> recently, to see if I can use this method to orginized and remember what I'd learned. // I use Chinese simply because English version of book is still too hard for me, I can't fully understand the story, so I later borrowed Chinese version.</li>
+    <li><strong>Updating:</strong> Not finished reading yet, will keep updating.</li>
+  </ol>
+</div>
 
-<ol>
-  <li><strong>Book:</strong> <code>Brave New World</code> is a <strong>dystopian</strong> novel written in 1931 by English author Aldous Huxley, and published in 1932. The book get similar [status]-[reputation] by people, as another famous dystopian novel, <code>1984</code> by George Orwell, 1949.</li>
-  <li><strong>Study note:</strong> Please see below section for those Concept Maps. Serving mainly only for myself. I was experimenting <a href="https://cmap.ihmc.us/docs/concept.php">Concept Map</a> recently, to see if I can use this method to orginized and remember what I'd learned. // I use Chinese simply because English version of book is still too hard for me, I can't fully understand the story, so I later borrowed Chinese version.</li>
-  <li><strong>Updating:</strong> Not finished reading yet, will keep updating.</li>
-</ol>
+<div class="h2">
+  <h2>Overview (概覽)</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/overview.svg" alt="Overview (概覽)">
+  </div>
+</div>
 
-<h2>Overview (概覽)</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/overview.svg" alt="Overview (概覽)">
+<div class="h2">
+  <h2>Chapters (所有章節)</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapters.svg" alt="Chapters (所有章節)">
+  </div>
 </div>
-<h2>Chapters (所有章節)</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapters.svg" alt="Chapters (所有章節)">
+
+<div class="h2">
+  <h2>Chapter 1</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter1.svg" alt="Chapter 1">
+  </div>
 </div>
-<h2>Chapter 1</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter1.svg" alt="Chapter 1">
+
+<div class="h2">
+  <h2>Chapter 3</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter3.svg" alt="Chapter 3">
+  </div>
 </div>
-<h2>Chapter 3</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter3.svg" alt="Chapter 3">
+
+<div class="h2">
+  <h2>Chapter 4</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter4.svg" alt="Chapter 4">
+  </div>
 </div>
-<h2>Chapter 4</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter4.svg" alt="Chapter 4">
+
+<div class="h2">
+  <h2>Chapter 5</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter5.svg" alt="Chapter 5">
+  </div>
 </div>
-<h2>Chapter 5</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter5.svg" alt="Chapter 5">
+
+<div class="h2">
+  <h2>Chapter 6</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter6.svg" alt="Chapter 6">
+  </div>
 </div>
-<h2>Chapter 6</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter6.svg" alt="Chapter 6">
+
+<div class="h2">
+  <h2>Chapter 7</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter7.svg" alt="Chapter 7">
+  </div>
 </div>
-<h2>Chapter 7</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter7.svg" alt="Chapter 7">
+
+<div class="h2">
+  <h2>Chapter 8</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter8.svg" alt="Chapter 8">
+  </div>
 </div>
-<h2>Chapter 8</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter8.svg" alt="Chapter 8">
+
+<div class="h2">
+  <h2>Chapter 9</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter9.svg" alt="Chapter 9">
+  </div>
 </div>
-<h2>Chapter 9</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter9.svg" alt="Chapter 9">
+
+<div class="h2">
+  <h2>Chapter 10</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter10.svg" alt="Chapter 10">
+  </div>
 </div>
-<h2>Chapter 10</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter10.svg" alt="Chapter 10">
+
+<div class="h2">
+  <h2>Chapter 11</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter11.svg" alt="Chapter 11">
+  </div>
 </div>
-<h2>Chapter 11</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter11.svg" alt="Chapter 11">
+
+<div class="h2">
+  <h2>Chapter 12</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter12.svg" alt="Chapter 12">
+  </div>
 </div>
-<h2>Chapter 12</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter12.svg" alt="Chapter 12">
+
+<div class="h2">
+  <h2>Chapter 13</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter13.svg" alt="Chapter 13">
+  </div>
 </div>
-<h2>Chapter 13</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/chapter13.svg" alt="Chapter 13">
+
+<div class="h2">
+  <h2>Bernard Marx (伯納德.馬克斯)</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/bernard-marx.svg" alt="Bernard Marx (伯納德.馬克斯)">
+  </div>
 </div>
-<h2>Bernard Marx (伯納德.馬克斯)</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/bernard-marx.svg" alt="Bernard Marx (伯納德.馬克斯)">
+
+<div class="h2">
+  <h2>Class (階級)</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/class.svg" alt="Class (階級)">
+  </div>
 </div>
-<h2>Class (階級)</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/class.svg" alt="Class (階級)">
+
+<div class="h2">
+  <h2>Conditioning (制約)</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/conditioning.svg" alt="Conditioning (制約)">
+  </div>
 </div>
-<h2>Conditioning (制約)</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/conditioning.svg" alt="Conditioning (制約)">
+
+<div class="h2">
+  <h2>John (約翰)</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/john.svg" alt="John (約翰)">
+  </div>
 </div>
-<h2>John (約翰)</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/john.svg" alt="John (約翰)">
+
+<div class="h2">
+  <h2>Lenina Crowne (列寧娜.克勞恩)</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/lenina-crowne.svg" alt="Lenina Crowne (列寧娜.克勞恩)">
+  </div>
 </div>
-<h2>Lenina Crowne (列寧娜.克勞恩)</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/lenina-crowne.svg" alt="Lenina Crowne (列寧娜.克勞恩)">
-</div>
-<h2>世界邦文明 (World State)</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/10/190310m200408/world-state.svg" alt="世界邦文明 (World State)">
+
+<div class="h2">
+  <h2>世界邦文明 (World State)</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/10/190310m200408/world-state.svg" alt="世界邦文明 (World State)">
+  </div>
 </div>
 
 <hr>
