--- a/source/_posts/19/03/16/190316m162051.md
+++ b/source/_posts/19/03/16/190316m162051.md
@@ -11,44 +11,48 @@ date: 2019-03-16 16:20:51
 <!-- more -->
 <hr>
 
-<h2>List</h2>
-<ol>
-  <li><strong>Example of real concept map:</strong> <a href="#190316-173221">Anchor</a>.</li>
-  <li><strong>About concept map:</strong> <a href="#190316m173224">Anchor</a>.</li>
-</ol>
-
-<h2>Example of real concept map<a id="190316-173221"></a></h2>
-
-<p>I pick <a href="https://www.facebook.com/photo.php?fbid=2272654299675310&set=a.1445366252404123&type=3&theater">this [image]-[story]</a> <strong>(not mine, but from other people)</strong>, just because is is highly abstract, to serve as a good testing real data. I don't specially in love with poems or literature, though I don't dislike them at the same time.</p>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/16/190316m162051/we-dont-own-our-partner-ever.jpg" alt="we-dont-own-our-partner-ever">
-  <img src="/treegbBlog/fs/m/19/03/16/190316m162051/we-dont-own-our-partner-ever.svg" alt="we-dont-own-our-partner-ever">
+<div class="h2">
+  <h2>List</h2>
+  <ol>
+    <li><strong>Example of real concept map:</strong> <a href="#190316-173221">Anchor</a>.</li>
+    <li><strong>About concept map:</strong> <a href="#190316m173224">Anchor</a>.</li>
+  </ol>
 </div>
-<p>So, if I can break a complex story down to many small pieces of concepts (<code>nodes</code>), and <code>connections</code>, and explicitly denote some <code>context scope number</code> (only at place really need this), I believe, any story can be describe with the form of <code>concept map</code>, and reader will do comprehension themselves. But for honest, text is still more condense to [express]-[convey] same amount of data.</p>
-<p>For more example of concept map, you can see <a href="/treegbBlog/19/03/10/190310m200408/">190310 Brave New World study note # 190310m200408</a>.</p>
 
-<h2>About concept map<a id="190316m173224"></a></h2>
+<div class="h2">
+  <h2>Example of real concept map<a id="190316-173221"></a></h2>
+  <p>I pick <a href="https://www.facebook.com/photo.php?fbid=2272654299675310&set=a.1445366252404123&type=3&theater">this [image]-[story]</a> <strong>(not mine, but from other people)</strong>, just because is is highly abstract, to serve as a good testing real data. I don't specially in love with poems or literature, though I don't dislike them at the same time.</p>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/16/190316m162051/we-dont-own-our-partner-ever.jpg" alt="we-dont-own-our-partner-ever">
+    <img src="/treegbBlog/fs/m/19/03/16/190316m162051/we-dont-own-our-partner-ever.svg" alt="we-dont-own-our-partner-ever">
+  </div>
+  <p>So, if I can break a complex story down to many small pieces of concepts (<code>nodes</code>), and <code>connections</code>, and explicitly denote some <code>context scope number</code> (only at place really need this), I believe, any story can be describe with the form of <code>concept map</code>, and reader will do comprehension themselves. But for honest, text is still more condense to [express]-[convey] same amount of data.</p>
+  <p>For more example of concept map, you can see <a href="/treegbBlog/19/03/10/190310m200408/">190310 Brave New World study note # 190310m200408</a>.</p>
+</div>
 
-<ol>
-  <li><strong>What is concept map:</strong> A [map]-[graphs] using <strong><code>nodes</code></strong> and <strong><code>connections</code></strong> to express a story, idea, complex context, knowledge ... anything you can think about. A simple example - <code>Apple --is--> Red --is--> Color</code>. See <a href="https://cmap.ihmc.us/docs/concept.php">here</a> for detail information about concept map.</li>
-  <li><strong>Node (bule  circle):</strong> A concept. Text inside each <code>node</code> is just a <code>symbol</code> to represent the real concept. Beside text (as symbol), another common symbol type is picture. But since text is way easier to made than picture, we don't use picture in concept map.</li>
-  <li><strong>Connection (arrowed line, or non-arrowed line):</strong>
-    <ol>
-      <li><strong>About:</strong> A connection connect 2 concept together.</li>
-      <li><strong>Connection with arrow:</strong> Arrow means the direction of description for example <code>Apple --is--> Red</code>, it make sense to say "apple is red", but not "red is apple", because the direction matters when 2 <code>nodes</code> (concept) are connecting together, in this case.</li>
-      <li><strong>Connection without description:</strong> Not all connection need description. For example <code>Monkey --can--> Climb --=--> High</code>, the connection between concept (<code>node</code>) "climb" and "high", don't need description (but need arrow to explain direction), in this case, the character <strong><code>=</code></strong> is used, it means "there is no need to have description on this connection" (nothing to do with "they are equal").</li>
-      <li><strong>"context" scope:</strong>
-        <ol>
-          <li><strong>About:</strong> The number shown on connection denote the <strong>different scope of context</strong>. Usually, the scope of <code>context</code> depends on the whole story, it could big to across multiple <code>nodes</code>, or could small to just happens only between 2 adjacent <code>nodes</code>, anyway, I don't specify the scope explicit on every connection (for simplicity reason). When reader is reading, they will <strong>find the right context to fit the story themselves</strong>. // However, in some case, there are different <code>context</code> fighting with each other, or overlapping, in these cases, I have to make it clear, I will use number to [marking]-[grouping] differt <code>context</code>, so it won't be confused by user, since <strong>one node might belong to two context at the same time</strong>.</li>
-          <li><strong>Example "6: description":</strong> 2 <code>nodes</code> is under context#6.</li>
-          <li><strong>Example "7: description":</strong> 2 <code>nodes</code> is under context#7.</li>
-          <li><strong>Example "(6)7: description":</strong> 2 <code>nodes</code> is under context#7. And it is related to the whole context#6, not the previous <code>node</code> (where the arrow starts).</li>
-          <li><strong>Example "(6): description":</strong> 2 <code>nodes</code> don't have explicit context. And it is related to the whole context#6, not the previous <code>node</code> (where the arrow starts).</li>
-        </ol>
-      </li>
-    </ol>
-  </li>
-</ol>
+<div class="h2">
+  <h2>About concept map<a id="190316m173224"></a></h2>
+  <ol>
+    <li><strong>What is concept map:</strong> A [map]-[graphs] using <strong><code>nodes</code></strong> and <strong><code>connections</code></strong> to express a story, idea, complex context, knowledge ... anything you can think about. A simple example - <code>Apple --is--> Red --is--> Color</code>. See <a href="https://cmap.ihmc.us/docs/concept.php">here</a> for detail information about concept map.</li>
+    <li><strong>Node (bule  circle):</strong> A concept. Text inside each <code>node</code> is just a <code>symbol</code> to represent the real concept. Beside text (as symbol), another common symbol type is picture. But since text is way easier to made than picture, we don't use picture in concept map.</li>
+    <li><strong>Connection (arrowed line, or non-arrowed line):</strong>
+      <ol>
+        <li><strong>About:</strong> A connection connect 2 concept together.</li>
+        <li><strong>Connection with arrow:</strong> Arrow means the direction of description for example <code>Apple --is--> Red</code>, it make sense to say "apple is red", but not "red is apple", because the direction matters when 2 <code>nodes</code> (concept) are connecting together, in this case.</li>
+        <li><strong>Connection without description:</strong> Not all connection need description. For example <code>Monkey --can--> Climb --=--> High</code>, the connection between concept (<code>node</code>) "climb" and "high", don't need description (but need arrow to explain direction), in this case, the character <strong><code>=</code></strong> is used, it means "there is no need to have description on this connection" (nothing to do with "they are equal").</li>
+        <li><strong>"context" scope:</strong>
+          <ol>
+            <li><strong>About:</strong> The number shown on connection denote the <strong>different scope of context</strong>. Usually, the scope of <code>context</code> depends on the whole story, it could big to across multiple <code>nodes</code>, or could small to just happens only between 2 adjacent <code>nodes</code>, anyway, I don't specify the scope explicit on every connection (for simplicity reason). When reader is reading, they will <strong>find the right context to fit the story themselves</strong>. // However, in some case, there are different <code>context</code> fighting with each other, or overlapping, in these cases, I have to make it clear, I will use number to [marking]-[grouping] differt <code>context</code>, so it won't be confused by user, since <strong>one node might belong to two context at the same time</strong>.</li>
+            <li><strong>Example "6: description":</strong> 2 <code>nodes</code> is under context#6.</li>
+            <li><strong>Example "7: description":</strong> 2 <code>nodes</code> is under context#7.</li>
+            <li><strong>Example "(6)7: description":</strong> 2 <code>nodes</code> is under context#7. And it is related to the whole context#6, not the previous <code>node</code> (where the arrow starts).</li>
+            <li><strong>Example "(6): description":</strong> 2 <code>nodes</code> don't have explicit context. And it is related to the whole context#6, not the previous <code>node</code> (where the arrow starts).</li>
+          </ol>
+        </li>
+      </ol>
+    </li>
+  </ol>
+</div>
 
 <hr>
 
