--- a/source/_posts/19/03/18/190318m144719.md
+++ b/source/_posts/19/03/18/190318m144719.md
@@ -11,22 +11,23 @@ date: 2019-03-18 14:47:19
 <!-- more -->
 <hr>
 
-<h2>List</h2>
-
-<ol>
-  <li><strong>What are { Logs } different than normal { Posts }?:</strong> <strong><code>Log Table</code></strong> log down all events, activities, thoughts happens to me every day. This is not as same as normal <u>posts</u>, because content inside <code>Log Table</code> are more <strong>trivial</strong> and updated <strong>more frequently</strong> than normal <u>posts</u>, while normal <u>posts</u> tends to be more focus to specific ((small)) topic. // I organized <code>Logs</code> (events) by puting all <code>Logs</code> (events) happened in same month into same post (<code>Log table</code>). For example, the post <a href="/treegbBlog/19/03/18/190318m150030">190318 ( Log table ) 2019-03 # 190318m150030</a> will list all <code>Logs</code> (events) happened from <u>2019-03-01</u> to <u>2019-03-31</u> (and will not list <code>Logs</code> happened in February, or April).</li>
-  <li><strong>All { Log Table }:</strong>
-    <ol>
-      <li><strong>2019:</strong>
-        <ol>
-          <li><strong>2019-03:</strong> <a href="/treegbBlog/19/03/18/190318m150030">190318 ( Log table ) 2019-03 # 190318m150030</a>.</li>
-          <li><strong>2019-04:</strong> <a href="/treegbBlog/19/04/01/190401m013644">190401 ( Log table ) 2019-04 # 190401m013644</a>.</li>
-          <li><strong>2019-05:</strong> <a href="/treegbBlog/19/05/01/190501m130707">190501 ( Log table ) 2019-05 # 190501m130707</a>.</li>
-        </ol>
-      </li>
-    </ol>
-  </li>
-</ol>
+<div class="h2">
+  <h2>List</h2>
+  <ol>
+    <li><strong>What are { Logs } different than normal { Posts }?:</strong> <strong><code>Log Table</code></strong> log down all events, activities, thoughts happens to me every day. This is not as same as normal <u>posts</u>, because content inside <code>Log Table</code> are more <strong>trivial</strong> and updated <strong>more frequently</strong> than normal <u>posts</u>, while normal <u>posts</u> tends to be more focus to specific ((small)) topic. // I organized <code>Logs</code> (events) by puting all <code>Logs</code> (events) happened in same month into same post (<code>Log table</code>). For example, the post <a href="/treegbBlog/19/03/18/190318m150030">190318 ( Log table ) 2019-03 # 190318m150030</a> will list all <code>Logs</code> (events) happened from <u>2019-03-01</u> to <u>2019-03-31</u> (and will not list <code>Logs</code> happened in February, or April).</li>
+    <li><strong>All { Log Table }:</strong>
+      <ol>
+        <li><strong>2019:</strong>
+          <ol>
+            <li><strong>2019-03:</strong> <a href="/treegbBlog/19/03/18/190318m150030">190318 ( Log table ) 2019-03 # 190318m150030</a>.</li>
+            <li><strong>2019-04:</strong> <a href="/treegbBlog/19/04/01/190401m013644">190401 ( Log table ) 2019-04 # 190401m013644</a>.</li>
+            <li><strong>2019-05:</strong> <a href="/treegbBlog/19/05/01/190501m130707">190501 ( Log table ) 2019-05 # 190501m130707</a>.</li>
+          </ol>
+        </li>
+      </ol>
+    </li>
+  </ol>
+</div>
 
 <hr>
 
