--- a/source/_posts/19/03/14/190314m190402.md
+++ b/source/_posts/19/03/14/190314m190402.md
@@ -8,47 +8,71 @@ date: 2019-03-14 19:04:02
 <!-- more -->
 <hr>
 
-<h2>List</h2>
-<ol>
-  <li><strong>About:</strong> I take these note just for experimenting <u>concept map</u>, when at the same time I was doing research on a social network platform I just found - <code>Minds</code>, to replace Facebook. <code>Reddit</code> is good, but it is not <u>self centered</u>, but <u>community centered</u>, the purpose and design is a bit different I think.</li>
-  <li><strong>Joe Rogan Experience #1248 - Bill Ottman:</strong> <a href="https://youtu.be/mJowz_-pj4U">Link</a>. This is the full talk of <code>Joe Rogan</code> and <code>Bill Ottman</code> (CEO of <code>Minds</code>)</li>
-  <li><strong>Minds.com:</strong> <a href="https://www.minds.com">Link</a>.</li>
-  <li><strong>Concept map:</strong> See below sections for Concept Maps of this video.</li>
-</ol>
-
-<h2>Overview</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/14/190314m190402/overview.svg" alt="Overview">
-</div>
-<h2>Timeline</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/14/190314m190402/timeline.svg" alt="Timeline">
-</div>
-<h2>{ Minds }</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/14/190314m190402/minds.svg" alt="{ Minds }">
-</div>
-<h2>Bill Ottman</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/14/190314m190402/bill-ottman.svg" alt="Bill Ottman">
-</div>
-<h2>{ Minds } 's policy</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/14/190314m190402/minds-s-policy.svg" alt="{ Minds } 's policy">
-</div>
-<h2>Social media</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/14/190314m190402/social-media.svg" alt="Social media">
-</div>
-<h2>Policy and moderation</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/14/190314m190402/policy-and-moderation.svg" alt="Policy and moderation">
-</div>
-<h2>Privacy</h2>
-<div class="imgBlock">
-  <img src="/treegbBlog/fs/m/19/03/14/190314m190402/privacy.svg" alt="Privacy">
+<div class="h2">
+  <h2>List</h2>
+  <ol>
+    <li><strong>About:</strong> I take these note just for experimenting <u>concept map</u>, when at the same time I was doing research on a social network platform I just found - <code>Minds</code>, to replace Facebook. <code>Reddit</code> is good, but it is not <u>self centered</u>, but <u>community centered</u>, the purpose and design is a bit different I think.</li>
+    <li><strong>Joe Rogan Experience #1248 - Bill Ottman:</strong> <a href="https://youtu.be/mJowz_-pj4U">Link</a>. This is the full talk of <code>Joe Rogan</code> and <code>Bill Ottman</code> (CEO of <code>Minds</code>)</li>
+    <li><strong>Minds.com:</strong> <a href="https://www.minds.com">Link</a>.</li>
+    <li><strong>Concept map:</strong> See below sections for Concept Maps of this video.</li>
+  </ol>
 </div>
 
+<div class="h2">
+  <h2>Overview</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/14/190314m190402/overview.svg" alt="Overview">
+  </div>
+</div>
+
+<div class="h2">
+  <h2>Timeline</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/14/190314m190402/timeline.svg" alt="Timeline">
+  </div>
+</div>
+
+<div class="h2">
+  <h2>{ Minds }</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/14/190314m190402/minds.svg" alt="{ Minds }">
+  </div>
+</div>
+
+<div class="h2">
+  <h2>Bill Ottman</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/14/190314m190402/bill-ottman.svg" alt="Bill Ottman">
+  </div>
+</div>
+
+<div class="h2">
+  <h2>{ Minds } 's policy</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/14/190314m190402/minds-s-policy.svg" alt="{ Minds } 's policy">
+  </div>
+</div>
+
+<div class="h2">
+  <h2>Social media</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/14/190314m190402/social-media.svg" alt="Social media">
+  </div>
+</div>
+
+<div class="h2">
+  <h2>Policy and moderation</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/14/190314m190402/policy-and-moderation.svg" alt="Policy and moderation">
+  </div>
+</div>
+
+<div class="h2">
+  <h2>Privacy</h2>
+  <div class="imgBlock">
+    <img src="/treegbBlog/fs/m/19/03/14/190314m190402/privacy.svg" alt="Privacy">
+  </div>
+</div>
 
 <hr>
 
